replica set drain mode does not cancel properly

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.8.0-rc0
    • Affects Version/s: None
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

       m31000| 2014-10-21T20:47:43.818-0400 I REPLSETS replSet election succeeded, assuming primary role
       m31000| 2014-10-21T20:47:43.818-0400 I REPLSETS transition to PRIMARY
       m31000| 2014-10-21T20:47:43.818-0400 I REPLSETS stepping down build3.nj1.10gen.cc:31000 (priority 1), build3.nj1.10gen.cc:31001 is priority 2 and 0 seconds behind
       m31000| 2014-10-21T20:47:43.818-0400 I REPLSETS Stepping down from primary in response to heartbeat
       m31000| 2014-10-21T20:47:43.818-0400 I REPLSETS [repl0x3304f20] transition to SECONDARY
       m31000| 2014-10-21T20:47:43.819-0400 I NETWORK  [conn1] end connection 127.0.0.1:56777 (1 connection now open)
       m31000| 2014-10-21T20:47:44.273-0400 I REPLSETS [rsSync] transition to primary complete; database writes are now permitted
      

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: