SERVER-15779 Clear drain mode flag when switching out of primary state.

Also, maintain the global lock held in multiApply while calling applyOpsToOplog.
Putting applyOpsToOplog outsite that critical section allows a race in which a
node might exit drain mode due to step-down and then be reelected primary, leading
to risky behavior.